--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
    <div>
        <h3>Communication and Internet Technologies</h3>
    </div>
+   <hr>
    <div>
        <p>Welcome to my Computer Science revision webpage, feel free to use this for your revision, good luck and have a nice day.</p>
    </div>
    <div>
        <ol>
-           <li>Victoria Peak</li>
-           <li>Kowloon Peak</li>
-           <li>Lion's Rock</li>
+           <h1>Data Transmission</h1>
+           <h2>The process of sending data from one digital device to another.</h2>
+           <h1>Interference</h1>
+           <h2>Disturbances that can prevent the successful transmission of data.</h2>
+           <h1>USB = Universial Serial Bus</h1>
        </ol>
    </div>
 </body>
