--- a/page1.html
+++ b/page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="page1styles.css">
    <title> Review Website </title>
 </head>
 <body>
@@ -16,16 +16,30 @@
        <ol>
            <h2><span style="color: rgb(19, 223, 111);">Data Transmission</span></h2>
            <h3><span style="color: rgb(255, 255, 255);">The process of sending data from one digital device to another.</span></h3>
+           <img src= "photos/Unknown.jpg" alt="Data Transmission" width="300" height="200">
            <h2><span style="color: rgb(19, 223, 111);">Interference</span></h2>
            <h3><span style="color: rgb(255, 255, 255);">Disturbances that can prevent the successful transmission of data.</span></h3>
+           <img src= "photos/Every-Computer-Science-Degree-Should-Require-a-Course-in-Cybersecurity.jpg" alt="Interference" width="350" height="200">
            <h2><span style="color: rgb(19, 223, 111);">USB = Universial Serial Bus</span></h2>
+           <h3><span style="color: rgb(255, 255, 255);">An example of parallel data transmission, uses multiple wires to transmit multiple bits of data at the same time.</span></h3>
+           <img src= "photos/USB.jpg" alt="USB" width="300" height="200">
            <h2><span style="color: rgb(19, 223, 111);">The 2 ways of Data Transmission</span></h2>
            <h3><span style="color: rgb(255, 255, 255);">Single Data Transmission: Uses one wire to transmit bits, can transmit over long distances, transmitted one bit at a time</span></h3>
            <h3><span style="color: rgb(255, 255, 255);">Parallel Data Transmission: Uses mulitple wires to transfer multiple bits at the same time, significantly faster than single data transmission, need more wires and is more expensive, a bigger chance of errors occuring</span></h3>
+           <img src= "photos/singleParallelDataTransmission.jpg" alt="Single & Parallel Data Transmissions" width="300" height="200">
            <h2><span style="color: rgb(19, 223, 111);">Simplex, duplex and half duplex transmission</span></h2>
            <h3><span style="color: rgb(255, 255, 255);">Simplex: One device is used to transmit and one device can only receive (like a one way street), e.g. Keyboard and traditional monitors</span></h3>
            <h3><span style="color: rgb(255, 255, 255);">Half-duplex: Both devices can transmit and receive messages, but only one device can transmit at one time, e.g. Walkie-Talkies</span></h2>
            <h3><span style="color: rgb(255, 255, 255);">Duplex: Both devices can transmit and receive messages, and both can transmit and recieve simultaneously, e.g. Telephone Network (both people can talk and listen at the same time).</span></h2>
+           <img src= "photos/simplexhalfduplexfullduplex.jpg" alt="Simplex, duplex & half duplex transmission" width="250" height="200">
+           <aside>
+            <h2><span style="color: rgb(19, 223, 111);">For more information check out these links as well :D</span></h2>
+            <ul>
+               <li><a href="https://www.bitsofbytes.co/data-transmission.html"><span style="color: rgb(255, 255, 255);">Bits of Bytes</span></a></li>
+               <li><a href="https://www.geeksforgeeks.org/error-detection-in-computer-networks/"><span style="color: rgb(255, 255, 255);">Geeks for Geeks</span></a></li>
+               <li><a href="https://www.computerscience.gcse.guru/theory/data-transmission"><span style="color: rgb(255, 255, 255);">Computer Science GCSE Guru</span></a></li>
+            </ul>
+         </aside>       
        </ol>
    </div>
 </body>
